@@ -43,7 +43,7 @@
 </div>
 <script type="text/javascript">
 <!--
-	restoreSortable('customeredit-sortable', '{$customeredit_sortable_order}}');
+	restoreSortable('customeredit-sortable', '{$customeredit_sortable_order}');
 //-->
 </script>
 {/block}
